--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.11.1
 bcrypt==4.0.1
+beautifulsoup4==4.12.2
 blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
@@ -10,6 +11,7 @@ Flask-Migrate==4.0.4
 Flask-MySQL==1.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
+google==3.0.0
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -20,6 +22,7 @@ mysql-connector-python==8.1.0
 mysql-connector-python-rf==2.2.2
 protobuf==4.21.12
 PyMySQL==1.1.0
+soupsieve==2.5
 SQLAlchemy==2.0.21
 typing_extensions==4.7.1
 Werkzeug==3.0.0
