--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-MySQL==1.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
 google==3.0.0
+google-cloud-language==2.11.1
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
